--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,17 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@pages/*": [
+        "./src/pages/*"
+      ],
+      "@interfaces/*": [
+        "./src/interfaces/*"
+      ],
+      "@shared/*": [
+        "./src/shared/*"
+      ]
+    }
   }
 }
