--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "paths": {
       "@pages/*": [ "src/app/pages/*" ],
       "@interfaces/*": [ "src/app/interfaces/*" ],
-      "@shared/*": [ "src/app/shared/*" ]
+      "@shared/*": [ "src/app/shared/*" ],
+      "@channels/*": [ "src/app/pages/channels/*" ]
     }
   }
 }
