--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.11",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
