--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/store-devtools": "^7.4.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.11",
+    "ngrx-store-localstorage": "^7.0.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
